--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,8 @@ dependencies = [
     "fastmcp>=2.11.3",
     "pydantic>=2",
     "pyyaml>=6",
-    "async-lru>=2.0.0",
+    "jwt>=1.4.0",
+    "aiocache>=0.12.3",
 ]
 
 [project.urls]
