--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "ibm-watsonx-data-intelligence-mcp-server"
-version = "0.2.0"
+version = "0.3.1"
 description = "MCP Server implementation for IBM Data Intelligence"
 readme = "readme_guides/README_PYPI.md"
 license = "Apache-2.0"
@@ -36,10 +36,10 @@ classifiers = [
 ]
 requires-python = ">=3.11"
 dependencies = [
-    "fastmcp>=2.11.3",
+    "fastmcp>=2.13.0",
     "pydantic>=2",
     "pyyaml>=6",
-    "jwt>=1.4.0",
+    "PyJWT>=2.8.0",
     "aiocache>=0.12.3",
     "tenacity>=9.0.0"
 ]
@@ -69,6 +69,7 @@ test = [
     "pytest-asyncio>=0.21.0",
     "pytest-cov>=7.0.0",
     "httpx>=0.24.0",
+    "pytest-xdist>=3.5.0",
 ]
 
 [tool.ruff]
@@ -82,6 +83,7 @@ test = [
     "pytest-asyncio>=1.1.0",
     "pytest-cov>=7.0.0",
     "respx>=0.22.0",
+    "pytest-xdist>=3.5.0",
 ]
 
 dev = ["build>=1.3.0", "twine>=6.1.0"]
