--- a/app/services/data_product/manifest.yaml
+++ b/app/services/data_product/manifest.yaml
@@ -4,9 +4,9 @@ service:
 system_instructions: |
   This service deals with data product related tasks.
   Tools available:-
-  data_product_create_url_data_product - Use this tool when user wants to create a URL data product. Note that this tool creates a URL data product draft and should ask user if he wants to attach business domain and contract to the created draft.
+  data_product_create_or_update_url_data_product - Use this tool when user wants to create a URL data product or update an existing draft with a URL asset. Note that this tool creates a URL data product draft and should ask user if he wants to attach business domain and contract to the created draft.
   data_product_get_assets_from_container - Use this tool to get assets from a container. Container can be "catalog" or "project".
-  data_product_create_data_product_from_asset_in_container - Use this tool when user wants to create a data product from an asset in container. Container can be "catalog" or "project". Note that this tool creates a data product draft and should ask user if he wants to attach contract and business domain to the created draft.
+  data_product_create_or_update_from_asset_in_container - Use this tool when user wants to create a data product from an asset in container or update an existing draft with an asset from container. Container can be "catalog" or "project". Note that this tool creates a data product draft and should ask user if he wants to attach contract and business domain to the created draft.
   data_product_attach_business_domain - Use this tool to attach business domain to a data product draft. Read the business domain to be attached from the user.
   data_product_attach_url_contract - Use this tool to attach a url contract to a data product draft. Read the contract details to be attached from the user.
   data_product_find_delivery_methods_based_on_connection - Use this tool to find delivery methods available in the catalog based on the connection. This tool lets the user choose from the available delivery methods. If the user does not know the delivery methods available, use this tool to help the user.
